Gamma Activity Formalism

--- a/src/content/background/formal-verification.tex
+++ b/src/content/background/formal-verification.tex
@@ -71,6 +71,8 @@ In contrast, as soon as an IR node receives a token from any input, it immediate
 
 Given the set of assumptions in \autoref{ssec:sysml_assumptions}, control flows and object flows in an activity diagram can be mapped to arcs in a Petri net.
 
+IR és LAS jobb kidolgozása, matek behozása, valamint az algoritmus kb leírása
+
 \subsubsection{Example Mapping}
 
 Figure ... shows an example mapping from a SysML activity diagram to a Petri net
