--- a/src/content/activity-language/Metamodel.tex
+++ b/src/content/activity-language/Metamodel.tex
@@ -26,33 +26,98 @@ In this section, I present the meta-model and the formal semantics of the Gamma 
 \subsection{Formal Definition}
 
 \begin{definition}[Gamma Activity Language]
-	A Gamma Activity Language model is a tuple of \(GAL = (N, F, G, V, P)\), where:
+	A Gamma Activity is a tuple of \(GA = (N, P, F, G, D, F_{Action})\), where:
 	
 	\begin{itemize}
-		\item \(N = { n_1, n_2, \dots, n_n } \) is a set of \emph{Nodes};
-		\item \(F = CF \bigcup DF \), where \( CF = { f_1, f_2, \dots, f_n } \) is a set of \emph{Control Flows}, and \( DF = { f_1, f_2, \dots, f_n } \), such that \(f \in F : n_1 \neq n_2 \forall \{n_1, n_2\} \in N \times N\). This means, that a given \emph{Flow} has to be defined between two different nodes;
-		\item \(G : F -> \{true, false\} \) is a function determining whether a given Flow is enabled;
-		\item \(V : N \) is a function returning the value contained in a node;
-		\item \(P : N \) is a function returning the set of pins a node has.
+		\item \(N = N_\mathit{Initial} \bigcup N_\mathit{Final} \bigcup N_\mathit{Pseudo} \bigcup N_\mathit{Decision} \bigcup N_\mathit{Merge} \bigcup N_\mathit{Action} \) is a set of \emph{Nodes}, where \(N_\mathit{Initial}\) contains the \emph{Initial} nodes, \(N_\mathit{Final}\) contains the \emph{Final} nodes, \(N_\mathit{Pseudo}\) contains the \emph{Pseudo} nodes, \(N_\mathit{Decision}\) contains the \emph{Decision} nodes, \(N_\mathit{Merge}\) contains the \emph{Merge} nodes and \(N_\mathit{Action}\) contains the \emph{Action} nodes;
+		\item \( P \subseteq P_\mathit{In} \bigcup P_\mathit{Out} \) is a set of two types of pins, where \(P_\mathit{In} : N_\mathit{Action} \rightarrow \{ p_1, \dots, p_n \} \) and \(P_\mathit{Out} : N_\mathit{Action} \rightarrow \{ p_1, \dots, p_n \} \) are the set of \emph{InputPins} and \emph{OutputPins}, respectively, with domains \(\{ d_1, \dots, d_n \} \subseteq D \);
+		\item \( F \subseteq F_C \bigcup F_D \), where \(F_C = \{ F_{C1}, \dots, F_{Cn} \} \) and \(F_D = \{ F_{D1}, \dots, F_{Dn} \} \) are the control and data flows, respectively. Let us denote the input/output flows of node \(n\) as \( \delta(n) \) and \( \Delta(n) \), and the source/target pins of flow \(f\) as \(\phi(f)\) and \(\Phi(f)\). For any given node \(n\), \( \delta(n) \neq \Delta(n) \) and for any given action node \(n_a\) \( \Phi(f) \in P_\mathit{In}(n_a) \forall f \in F_D \bigcap \delta(n_a) \) and \( \phi(f) \in P_\mathit{Out}(n_a) \forall f \in F_D \bigcap \Delta(n_a) \) shall always hold. This means, that a flow cannot be input and output to the same node at the same time, and for a given action node, all input/output flows shall be associated with an input/output token, respectively;
+		\item \(G : F \rightarrow \{ \mathit{True}, \mathit{False} \} \) is a function determining whether a given flow is enabled;
+		\item \(D = \{ D_{1}, D_{2}, \dots, D_{n} \} \) is a set of value domains;
+		\item \(F_{Action} : N \rightarrow D \) is a function running the contained action, and returning it's result values.
 	\end{itemize}
+	
+Informally, Gamma Activities are composed of \emph{nodes} (\emph{Initial/Final}, \emph{Decision/Merge}, \emph{Action} and \emph{Pseudo}) and flows (\emph{Control} and \emph{Data}) in between them. A given action can also have any number of \emph{Pins} with a domain, for which, there must be one and only one \emph{data} flow connected to the node. An action node also has a special \(F_{Action}\), which implements its specific behaviour, and returns the values of its output pins.
 	
 \end{definition}
 
-The state of the Activity is defined by the state of nodes \(SN : N \rightarrow \{ Idle, Running, Done \}\) and the state of flows \(SF : F \rightarrow \{ Empty, Full \} \). The behaviour of the system is described as follows. We define three functions \emph{F1}, \emph{F2} and \emph{F3} (defined down below), of which one is non-deterministicly selected and run for each node. Let us denote the set of input/output flows as \(inflows(n)\) and \(outflows(n)\), respectively.
+\begin{definition}[Gamma Activity State]
+	The state of a GA is defined the following:
+	
+	\begin{itemize}
+		\item \(S_N : N \rightarrow \{ \mathit{Idle}, \mathit{Running}, \mathit{Done} \} \) is a function returning the \emph{state} of a node;
+		\item \(S_F : F \rightarrow \{ \mathit{Empty}, \mathit{Full} \} \) is a function returning the \emph{state} of a flow;
+		\item \(V_N : N \rightarrow D \) is a function returning the current \emph{value} contained in a node;
+		\item \(\mathit{PV}_N : N \times P \rightarrow D \) is a function returning the current \emph{value} contained in a node's pin;
+		\item \(V_F : F \rightarrow D \) is a function returning the current \emph{value} contained in a flow.
+	\end{itemize}
 
-\paragraph{F1} 
+Informally, the state of Gamma Activities are determined by the nodes' \emph{state} (\emph{Idle}, \emph{Running}, \emph{Done}) and their (or their pins') values, the flows' \emph{state} (\emph{Empty}, \emph{Full}) and their values. The following state configuration is notated with a '$\prime$'.
+	
+\end{definition}
 
-F1 function is enabled if and only if \( \exists n \in N : SN(n) = Idle, \forall f \in inflows(n) : SF(f) = Full \). When F1 is enabled for a node \(n\) it fires the following way: \( SN(n) := Running, \forall f \in inflow(n) SF(f) := Empty \). In words: when there is an \emph{Idle} node, for which all input flows are \emph{Full} it fires, setting all input flow's state to \emph{Empty} and the nodes state to \emph{Running}. 
+\begin{definition}[State Transition Functions] 
+	The state of Gamma Activities are changed by the following functions:
 
-\paragraph{F2} 
+\begin{equation}
+	F_{In} : N \rightarrow
+	\begin{cases}
+		\begin{aligned}[b]
+			&\text{select } f_s \text{, such that} f_s \in \delta(n) \wedge S_F(f) = \mathit{Full} \\
+			&V_N^\prime(n) = V_F(f_s) \\
+			&S_F^\prime(f_s) = \mathit{Empty} \\
+			&S_N^\prime(n) = \mathit{Running},
+		\end{aligned} & \text{if } n \in N_\mathit{Merge} \\[8pt]
+		\begin{aligned}[b]
+			&\mathit{PV}_N^\prime(n, \Phi(f)) = V_F(f) : \forall f \in \delta(n) \bigcap F_D \\
+			&S_F^\prime(f) = \mathit{Empty} : \forall f \in \delta(n) \\
+			&S_N^\prime(n) = \mathit{Running},
+		\end{aligned} & \text{if } n \in N_\mathit{Action} \\[8pt]
+		\begin{aligned}[b]
+			&V_N^\prime(n) = V_F(f) : f \in \delta(n) \bigcap F_D \\
+			&S_F^\prime(f) = \mathit{Empty} : \forall f \in \delta(n) \\
+			&S_N^\prime(n) = \mathit{Running},
+		\end{aligned} & \text{otherwise}
+	\end{cases}
+\end{equation}
 
-F2 function is enabled if and only if \( \exists n \in N : SN(n) = Running \). When F2 is enabled for a node \(n\) it fires the following way: \( SN(n) := Done \). In words, this means a given node can stochastically change states form \emph{Running} to \emph{Done}.
+\begin{equation}
+	F_{Run} : N \rightarrow
+	\begin{cases}
+		\begin{aligned}[b]
+			&V_N^\prime(n) = F_{Action}(n, V_N(n)) \\
+			&S_N^\prime(n) = \mathit{Done},
+		\end{aligned} & \text{if } n \in N_{Action} \\[8pt]
+		S_N^\prime(n) = \mathit{Done}, & \text{otherwise}
+	\end{cases}
+\end{equation}
 
-\paragraph{F3} 
+\begin{equation}
+	F_{Out} : N \rightarrow
+	\begin{cases}
+		\begin{aligned}[b]
+			&\text{select } f_s \text{, such that} f_s \in \Delta(n) \wedge S_F(f_s) = \mathit{Empty} \wedge G(f_s) = \mathit{True} \\
+			&V_F^\prime(f_s) = V_N(n) \\
+			&S_F^\prime(f_s) = \mathit{Full} \\
+			&S_N^\prime(n) = \mathit{Idle},
+		\end{aligned} & \text{if } n \in N_\mathit{Decision} \\[8pt]
+		\begin{aligned}[b]
+			&V_F^\prime(f) = \mathit{PV}_N(n, \phi(f)) : \forall f \in \Delta(n) \bigcap F_D,
+			&S_F^\prime(f) = \mathit{Full} : \forall f \in \Delta(n) \\
+			&S_N^\prime(n) = \mathit{Idle},
+		\end{aligned} & \text{if } n \in N_\mathit{Action} \\[8pt]
+		\begin{aligned}[b]
+			&S_F^\prime(f) = \mathit{Full} : \forall f \in \Delta(n) \\
+			&S_N^\prime(n) = \mathit{Idle},
+		\end{aligned} & \text{otherwise}
+	\end{cases}
+\end{equation}
 
-F3 function is enabled if and only if \( \exists n \in N : SN(n) = Done, \forall f \in outflows(n) : SF(f) = Empty, G(f) = true \). When F3 is enabled for a node \(n\) it fires the following way: \( SN(n) := Idle, \forall f \in outflows(n) SF(f) = Full \). In words, this means when a given node finished running, and all of its outpuf flows are \emph{Empty}, it will change its state to \emph{Idle}, and all of its output flows to \emph{Full} - transfering the token "state" from the node to the output flows.
+At any point, any enabled function is selected and run for a node non-deterministically. 
 
-komment: ezek a függvények felül vannak definiálva call-activity-re, decision node-ra és merge node-ra. Hogy írjam ezt le: sorban menjek végig a különböző fajta node-okon formálisan, vagy elég, ha ezt a metamodel leírásánál írom? Ezen felül még a pinek definícióját is be kéne vezetni: az ötletem az, hogy amikor egy data flow van, akkor egy adott pin-hez is hozzá van csatolva, és minden node-hoz tartozik egy "tároló" pin, ami egy adott értéket tárol. Amikor a data flow-ban átmegy a token, akkor innen olvas, vagy ide ír (és egy adott data flow csak egy tokent tud tárolni). Vagy, akár ezt úgy is lehetne, hogy a függvényeket úgy definiálom, hogy ha data flow így: - ha control flow akkor így: -. (persze akkor be kell vezetni a cf és df fogalmát)
+\end{definition}
+
+Ide fogok tenni egy szép diagrammot ami ábrázolja a fentebb említett állaotokat és függvényeket + egy rövid leírást hozzá.
 
 \subsection{Root Structure}\label{ssec:root_structure}
 
