--- a/src/activity-gamma-tdk.tex
+++ b/src/activity-gamma-tdk.tex
@@ -63,14 +63,13 @@
 \include{content/background}
 \include{content/activity-language}
 \include{content/activity-model-verification}
-\include{content/implementation}
 \include{content/evaluation}
-\include{content/future-work}
+\include{content/conclusion}
 \include{content/acknowledgement}
 
 % List of Figures, Tables
 %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-%\listoffigures\addcontentsline{toc}{chapter}{\listfigurename}
+\listoffigures\addcontentsline{toc}{chapter}{\listfigurename}
 %\listoftables\addcontentsline{toc}{chapter}{\listtablename}
 
 
