--- a/src/bib/mybib.bib
+++ b/src/bib/mybib.bib
@@ -139,18 +139,25 @@ title = {Application Note A Crash Course in UML State Machines Document Revision
 author = {Object Management Group},
 title = {OMG System Modeling Language},
 url = {https://www.omg.org/spec/SysML/}
-}
+)
+
+@article(omg_sysml_v2,
+author = {Object Management Group},
+title = {Systems Modeling Language Version 2 (SysMLv2)},
+url = {https://www.omgsysml.org/SysML-2.htm},
+year = {2020},
+)
 
 @article(uppaal,
 author = {Behrmann, G., David, A., Larsen, K. G., Håkansson, J., Pettersson, P., Yi, W., Hendriks, M.},
 title = {Uppaal 4.0},
 year = {2006}
-}
+)
 @article(theta,
 author = {Tóth, T., Hajdu, A., Vörös, A., Micskei, Z., Majzik, I.},
 title = { Theta: a framework for abstraction refinement-based model checking.},
 journal = {Stewart, D., Weissenbacher, G. (eds.), Proceedings of the 17th Conference on Formal Methods in Computer-Aided Design}
-}
+)
 
 @article(xsts,
 author = {Milán Mondok},
