--- a/src/content/activity-model-verification.tex
+++ b/src/content/activity-model-verification.tex
@@ -2,5 +2,15 @@
 \chapter{Activity Model Verification}\label{ch:activiy_verification}
 %----------------------------------------------------------------------------
 
+ide fog kerülni végül az implementation, hogyan kell trafózni a modelt, és hogyan kell ezt az egészet integrálni a gamma statechart trafóval (hogy verifikálható legyen)
+
+\begin{figure}[!ht]
+	\centering
+	\includesvg[inkscapelatex=false, width=120mm, keepaspectratio]{gamma-functionality-activity-overview}
+	\caption{Overview of my modification to the Gamma framework. Added parts are outlined with green, while edited parts are outlined with orange.}
+	\label{fig:gamma-activity-overview}
+\end{figure}
+
+
 \input{content/activity-model-verification/state-model}
 \input{content/activity-model-verification/activities-alongside-statecharts}
