--- a/src/content/background/engineering-models.tex
+++ b/src/content/background/engineering-models.tex
@@ -8,7 +8,7 @@ The INCOSE SE Vision 2020\cite{incose-systems-engineering-2020} defines Model-ba
 
 Applying MBSE is expected to provide significant benefits over the document centric approach by enhancing productivity and quality, reducing risk, and providing improved communications among the system development team.\cite{omgwiki}
 
-In MBSE, one of the most important concepts is the term "model" itself. In the literature it has many different definitions:
+In MBSE, one of the most important concepts is the term "model" itself. Literature gives various definitions for models:
 
 \begin{enumerate}
 	\item A physical, mathematical, or otherwise logical representation of a system, entity, phenomenon, or process.\cite{DoD_modeling_and_simulation}\label{item:dod}
@@ -24,17 +24,18 @@ As one can see, choosing a definition is very much dependent upon how we wish to
 
 Systems Modeling Language (OMG SysML)\cite{omg_sysml} is a general-purpose modeling language that supports the specification, design, analysis, and verification of systems that may include harware and equipment, software, data, personnel, procedures, and facilities. SysML is a graphical modeling language with a semantic foundation for representing requirements, behaviour, structure, and properties of the system and its components.\cite{sysml_practical_guide}
 
-This work focuses only on the \emph{behavioural} modeling tools SysML provides. In the following section, I present two of the most used concepts.
+This work focuses only on the \emph{behavioural} modeling tools SysML provides. In the following section, I present two of the most used concepts; State Machines and Activity Diagrams.
 
 \subsubsection{State Machine}
 
-Reactive systems are all around us in our daily lives; in smart phones, avionics systems or event our calculators. Frequently, reactive systems appear in areas, where safety-critical operation is crucial, as even the slightestmisbehaviour can have catastrophic consequences. This makes the verification of these systems a must during their design process.
+Reactive systems are all around us in our daily lives; in smart phones, avionics systems or event our calculators. Frequently, reactive systems appear in areas, where safety-critical operation is crucial, as even the slightest
+misbehaviour can have catastrophic consequences. This makes the verification of these systems a must during their design process.
 
 The defining characteristic of reactive systems is their event-driven nature, which means that they continuously receive external stimuli (events), based on which they change their internal state and possibly react with some output\cite{10.1007/978-3-642-82453-1_17}. Reactive systems can be verified using model checking techniques (see \autoref{sec:formal_verification}). Statecharts\cite{HAREL1987231} are a popular and intuitive language to capture the behaviour of reactive systems \cite{10.1145/3417990.3421407, 10.1007/978-3-319-11653-2_10}, and are at the same time formal and rigorous. 
 
 \begin{figure}[!ht]
 	\centering
-	\includegraphics[width=67mm, keepaspectratio]{figures/sysml_state_machine.png}\hspace{1cm}
+	\includegraphics[width=110mm, keepaspectratio]{figures/sysml_state_machine.png}\hspace{1cm}
 	\caption{A SysML State Machine.}
 	\label{fig:sysml_state_machine}
 \end{figure}
@@ -43,7 +44,7 @@ SysML state machines (see \ref{fig:sysml_state_machine}) extend the concept of s
 
 \subsubsection{Activity Diagram}\label{ssec:sysml_activity}
 
-Reactive systems however cannot describe the complicated semantics of distributed systems with concurrent, parallel behaviour, where the \emph{interesting} thing is what the system \emph{does} step-by-step. SysML activity diagrams are a primary representation for modeling process based behaviour\cite{omg_sysml} for distributed, concurrent systems. \autoref{fig:sysml_activity_artifacts} shows the set of interesting artifacts used in this work. In the following, I will introduce the different artifacts and show an example of a SysML activity diagram.
+As stated above, reactive systems are used frequently in the industry, however, they cannot describe the complicated semantics of distributed systems with concurrent, parallel behaviour, where the \emph{interesting} thing is what the system \emph{does} step-by-step. SysML activity diagrams are a primary representation for modeling process based behaviour\cite{omg_sysml} for distributed, concurrent systems. \autoref{fig:sysml_activity_artifacts} shows the set of interesting artifacts used in this work. In the following, I will introduce the different artifacts and show an example of a SysML activity diagram.
 
 \begin{figure}[!ht]
 	\centering
@@ -52,12 +53,14 @@ Reactive systems however cannot describe the complicated semantics of distribute
 	\label{fig:sysml_activity_artifacts}
 \end{figure}
 
-SysML activity diagram is a graph based diagram, where the nodes are connected via flows. The dynamic behaviour of activity diagrams comes from \emph{tokens} travelling from node to node; based on the given node's semantics a connected flow removes tokens from the source node and puts them onto the target node.
+SysML activity diagram is a graph based model, where the nodes are connected via flows. The dynamic behaviour of activity diagrams comes from \emph{tokens} travelling from node to node; based on the given node's semantics a connected flow removes tokens from the source node and puts them onto the target node. Flows can also have \emph{guards}, which are expressions specifying when the given flow is \emph{enabled} or not; only enabled nodes can transfer tokens.
 
-A \emph{control} token is a simple token without any value associated with it, a \emph{data} token is a token that contains some value. 
-The difference between the nodes capture the various behaviours a given activity diagram can model.
-Simple \textbf{actions} represents a single step of behaviour that converts a set of inputs to a set of outputs Both inputs and outputs are specified as pins. Behaviour is represented as a flow of tokens, the flow is started from the initial node, which generates and passes a token to each node to which it is connected. Fork nodes generate tokens on all of its leaving paths, and join nodes generate a token on the leaving path when all entering paths have at least one token. Merge nodes consume all incoming tokens, and only sends out one on its outgoing flows, likewise, decision nodes take one token from its input flows, and sends it out on its one and only one enabled outflows.
-There are two kinds of flows, control and object flows. Control tokens travel through control flows, and data tokens travel through object flows. Object flows must start from an output pin, and must end with an input pin. The execution of an activity diagram ends when the activity final node receives a token. The detailed specification can be found in OMG\cite{omg_sysml}.
+Tokens are a way of creating limitation over which node can do work, and which cannot; a given node is only considered \emph{running}, when it contains a token. Tokens \emph{flow} between nodes, carrying with them a given value - this value can be of type \emph{void}, which makes it a \emph{control} token.
+
+The different nodes represent the different semantic `tools` at our disposal; they can represent different actions, or introduce interesting token flow semantics.
+Simple \textbf{actions} represent a single step of behaviour that converts a set of inputs to a set of outputs. Both inputs and outputs are specified as pins, which get their data from connected flows - making that flow a \emph{data flow}. The flow is started from the initial node, and is ended with a \emph{Flow Final} or \emph{Activity Final} node. \emph{Fork} nodes generate tokens on all of their output flows, and \emph{Join} nodes only forward the tokens, when all input flows contain one - thus making the kinds a \emph{pair}. On the other hand, \emph{Merge} nodes do not wait for all flows, they forward any token they receive instantly. Likewise, \emph{Decision} nodes take one token from its input flows, and sends it out on its one and only one enabled output flows.
+
+The detailed specification for SysML Activity Diagrams can be found in the OMG specification\cite{omg_sysml}.
 
 \textit{Activity example description, and figure. This example will be used for all activity examples.}
 
