--- a/src/content/conclusion.tex
+++ b/src/content/conclusion.tex
@@ -1,5 +1,5 @@
 %----------------------------------------------------------------------------
-\chapter{Conclusion}
+\chapter{Conclusion}\label{ch:conclusion}
 %----------------------------------------------------------------------------
 
 % TODO
