--- a/src/content/activity-language.tex
+++ b/src/content/activity-language.tex
@@ -1,12 +1,11 @@
 %----------------------------------------------------------------------------
-\chapter{Gamma Activity Language}
+\chapter{Gamma Activity Language}\label{sec:gamma-activity-language}
 %----------------------------------------------------------------------------
 
 The high-level nature of SysML activities means they are easy to model complicated behaviours including many different \emph{actors} for engineers, but leads to an increasingly harder time trying to run formal verification on them. In the real world, SysML models often contain state machines that call activity diagrams as so called \emph{do behaviour}, because often times this makes the design process easier. However, models containing \emph{do activity} actions cannot be verified directly; the activities have to be pre-processed and transformed into something else, like javascript or state machines (cite Pragmatic Verification and Validation of Industrial Executable SysML Models). As discussed above in \autoref{ssec:activities-as-petri-nets}, we can define a mapping between activities and Petri nets (which have exact semantics), however, that mapping is not exhaustive.
 
-In this work, I propose the Gamma Activity Language, which aims to be an intermediary language between SysML and XSTS by having exact semantics alongside statecharts. I will also propose a transformation from Gamma Activity Language to XSTS in \autoref{ch:activiy_verification}, and integrate it into Gamma in \autoref{ch:implementation}.
+The pre-existing Gamma Statechart Composition Framework (\autoref{sec:gamma}) implements this pipeline, however, it does not include activity diagrams. For this reason, I propose and implement (\autoref{ch:activiy_verification}) the \emph{Gamma Activity Language}, and integrate it (\autoref{sec:implementation}) into the pipeline shown in \autoref{fig:gamma-overview}.
 
 \input{content/activity-language/design-decisions}
-\input{content/activity-language/Metamodel}
+\input{content/activity-language/formal-definition}
 \input{content/activity-language/dsl}
-\input{content/activity-language/examples}
