--- a/src/content/evaluation.tex
+++ b/src/content/evaluation.tex
@@ -1,5 +1,3 @@
 %----------------------------------------------------------------------------
-\chapter{Evaluation}
+\chapter{Evaluation}\label{ch:evaluation}
 %----------------------------------------------------------------------------
-
-% TODO
